k8s-deployments/03-image-updater/overlays/staging/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-updater
spec:
  replicas: 1
